<?xml version="1.0"?>
<package>
  <name>camera_misc_tools</name>
  <version>0.0.1</version>
  <description>ROS camera related miscellaneous tool package</description>

  <maintainer email="y-tanaka@jsk.t.u-tokyo.ac.jp">Yoshimaru Tanaka</maintainer>
  <author email="y-tanaka@jsk.t.u-tokyo.ac.jp">Yoshimaru Tanaka</author>

  <license>Apache 2.0</license>
  <url type="website">http://ros.org/wiki/ros_misc_tools</url>
  <url type="repository">https://github.com/yoshimalucky/ros_misc_tools</url>
  <url type="bugtracker">https://github.com/yoshimalucky/ros_misc_tools/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <build_depend></build_depend> -->

  <run_depend>rosbag</run_depend>

</package>
